# pr-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  action.yml  example_caller_workflow.yml  pr_agent.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_pr_agent.py
.github/workflows/: pr_review.yml  reusable_pr_review.yml
examples/: README.md  cli.py  example_caller_workflow.yml  example_usage.py
src/pr_agent/: __init__.py  agent.py
src/stubs/: dotenv.pyi
tests/: test_pr_agent.py
